<resources>
<string name="app_name">JetpackStudy</string>
<string name="bottom_panel_correct">正确</string>
<string name="bottom_panel_error">错误</string>
<string name="bottom_panel_reset">重测</string>

<string name="producetest_result">生产测试结果</string>
<string name="is_producetest_result_ok">生产测试结果是否正常？</string>
<string name="bar_code">序列号</string>
<string name="meid">MEID</string>
<string name="imei1">IMEI1:</string>
<string name="imei2">IMEI2:</string>
<string name="sim1">SIM1:</string>
<string name="sim2">SIM2:</string>
<string name="sim2_signal">SIM2信号强度：</string>
<string name="sim2_connect">SIM2入网状态：</string>
<string name="sim2_connect_tip">SIM2入网状态：正在检测中。。。</string>

<string name="phone_soft_version">手机软件版本</string>
<string name="produce_result">生产测试结果</string>
<string name="storage_tip">内存信息</string>

<string name="sdcard_text">SD卡</string>
<string name="wifi_mac_text">WIFI MAC</string>
<string name="bt_mac_text">BT MAC</string>
<string name="googlekey_test_fail">AttestationKey测试失败</string>
<string name="sim_nok">NOK</string>
<string name="nok">NOK</string>
<string name="sd_note_have">内部SD卡处于正常工作</string>
<string name="sd_note_no">未找到SD卡</string>
<string name="imei_err_msg">IMEI号错误</string>

<string name="sw_version">软件版本号：</string>
<string name="inner_sw_version">内部版本号：</string>
<string name="serial_num">序列号：</string>
<string name="barcode">barcode：</string>

<string name="storage_text">运行内存和内部存储：</string>
<string name="sdallsize">总容量：</string>
<string name="sdfreesize">剩余容量：</string>

<string name="device_test">设备信息</string>
<string name="device_test_error">获取信息失败</string>
<string name="sd_note_have_have_external">内部SD卡处于正常工作</string>
<string name="sd2_note_have">外部SD卡处于正常工作</string>


<string name="sd_note_not">未找到内部SD卡</string>
<string name="sd2_note_not">未找到外部SD卡</string>


    <string name="record_play_sound">录音</string>
    <string name="is_record_play_sound_ok">录音是否正常？</string>
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>
    <string name="btn_play">播放录音</string>
    <string name="record_play_sound_prepare">准备开始</string>
    <string name="btn_finish">完成录音</string>
    <string name="MIC">MIC</string>
    <string name="main_mic">主MIC</string>
    <string name="sub_mic">副MIC</string>
    <string name="is_MIC_ok">MIC测试结果是否正常？</string>
    <string name="mic_warning">请对着麦克风讲话，漂亮的音符将随之上下舞动。否则请记录麦克风 出现故障！</string>
    <string name="mic_record">开始</string>
    <string name="mic_tip_main_mic">主MIC</string>
    <string name="mic_tip_sub_mic">副MIC</string>
</resources>