<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.zhangdi.jetpackstudy.bean.CameraTestBean" />
    </data>

    <RelativeLayout
        android:id="@+id/base_RL_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".factorytest.FragmentActivity">

        <TextView
            android:id="@+id/test_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_5"
            android:background="@color/titleBackColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_50"
            android:layout_below="@id/test_title"
            android:background="@color/backColor"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mic_warning_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:text="@string/mic_warning"
                />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_45"
                android:layout_marginTop="@dimen/dp_2"
                android:onClick="onClick"
                android:text="@string/btn_start" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_45"
                android:layout_marginTop="@dimen/dp_2"
                android:onClick="onClick"
                android:text="@string/btn_stop" />

            <Button
                android:id="@+id/btn_play"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_45"
                android:layout_marginTop="@dimen/dp_2"
                android:onClick="onClick"
                android:text="@string/btn_play" />


            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_play" />

        </LinearLayout>

        <include
            android:layout_alignParentBottom="true"
            layout="@layout/activity_bottom_panel"
            android:layout_height="@dimen/dp_50"
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent" />

    </RelativeLayout>
</layout>